--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "schema-viewer",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "bin": {
     "schema-viewer": "./bin/schema-viewer.js"
   },
@@ -12,6 +12,6 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-publish": "0.0.5"
+    "grunt-release": "^0.13.0"
   }
 }
