--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
   "name": "schema-viewer",
   "version": "0.0.2",
+  "main": "lib/server/babel.js",
   "bin": {
     "schema-viewer": "./bin/schema-viewer.js"
   },
   "dependencies": {
+    "babel-core": "^6.3.17",
+    "babel-preset-es2015": "^6.3.13",
     "commander": "^2.9.0",
     "express": "^4.13.3",
     "open": "0.0.5",
-    "yamljs": "^0.2.4"
+    "recursive-readdir": "^1.3.0"
   },
   "devDependencies": {
+    "angular": "^1.4.8",
+    "angular-resizable": "^1.2.0",
+    "angular-ui-router": "^0.2.15",
+    "babel-loader": "^6.2.0",
+    "bootstrap": "^3.3.6",
+    "css-loader": "^0.23.0",
+    "extract-text-webpack-plugin": "^0.9.1",
     "grunt": "^0.4.5",
-    "grunt-release": "^0.13.0"
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-release": "^0.13.0",
+    "grunt-webpack": "^1.0.11",
+    "html-loader": "^0.4.0",
+    "json-schema-view": "^0.4.3",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
+    "ng-annotate-loader": "0.0.10",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
   }
 }
