--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "schema-viewer",
-  "version": "0.0.4",
+  "version": "0.0.5-0",
   "main": "lib/server/babel.js",
   "bin": {
     "schema-viewer": "./bin/schema-viewer.js"
