--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-release": "^0.13.0"
-  }
+  },
+  "repository": "github.com/EloB/schema-viewer"
 }
