--- a/package.json
+++ b/package.json
@@ -14,5 +14,16 @@
     "grunt": "^0.4.5",
     "grunt-release": "^0.13.0"
   },
-  "repository": "github.com/EloB/schema-viewer"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/EloB/schema-viewer.git"
+  },
+  "license": "MIT",
+  "contributors": [
+    {
+      "name": "Olle Bröms",
+      "email": "olle.broms@ewebbyran.se",
+      "url": "http://ewebbyran.se"
+    }
+  ]
 }
