--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "schema-viewer": "./bin/schema-viewer.js"
   },
   "dependencies": {
-    "babel-core": "^6.3.17",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.3.13",
     "commander": "^2.9.0",
     "express": "^4.13.3",
     "open": "0.0.5",
